- Fix bug with missing items in overflowing AUI toolbar (Maarten Bent).
- Revert to left-aligning wxSpinCtrl contents by default.
- Make wxRibbonButtonBar buttons more customizable (Max Maisel).
- Add wxHtmlEasyPrinting::SetPromptMode() (pavel-t).
- Fix possible infinite loop in wxHtmlWindow layout (trivia21).
- Add "hint" property support to XRC for wxComboBox and wxSearchCtrl.

wxGTK:

- Implement wxTextCtrl::HitTest() for single line controls.
- Fix not showing wxInfoBar with GTK+ 3 < 3.22.29.
- Fix the build with glib < 2.32 (e.g. CentOS 6).

wxMSW:

- Fix hang after clearing wxTAB_TRAVERSAL style on a window with children.
- Fix handling of AUX2 mouse button events (Trylz).
- Fix saving/restoring window position for maximized windows.
- Fix stack corruption when using wxStackWalker (srfisk).
- Fix positioning windows at positions >= SHORT_MAX (Cătălin Răceanu).
- Honour alignment flags for multiline buttons using custom colours too.
- Support MSVC auto-linking when using monolithic build too (PB).

wxOSX:

- Fix dispatching pending events (and CallAfter()) in console applications.

wxQt:

- Fix menu bar background colour (Naser Buhamad).


3.1.1: (released 2018-02-19)
----------------------------

INCOMPATIBLE CHANGES SINCE 3.1.0:

- wxListCtrl::HasCheckboxes() and EnableCheckboxes(), which were added in
  3.1.0, have been renamed to HasCheckBoxes and EnableCheckBoxes respectively
  for consistency with wxCheckBox naming.

- The enum value wxTASKBAR_JUMP_LIST_DESTIONATION, which was added in 3.1.0,
  contains a typo and has been renamed to wxTASKBAR_JUMP_LIST_DESTINATION.
  
- wxZipOutputStream will now automatically convert filenames to UTF-8, if the
  wxMBConv used when calling the constructor supports UTF-8 encoding.


All:

- Add CMake-based build system (Tobias Taschner).
- Add wxSecretStore for storing passwords using the OS-provided facilities.
- Add support for compiling application code with wxNO_UNSAFE_WXSTRING_CONV.